<resources>
    <string name="app_name">Trail</string>
    <string name="action_settings">Settings</string>\
    <string name="about_text">About</string>
    <string name="edit_profile">Edit Profile</string>

    <string name="action_find_location">Find Location</string>
    <string name="action_menu">Menu</string>

    <string name="long_text">Android 5.0 Lollipop was one of the most significant Android releases ever,
        in no small part due to the introduction of material design,
        a new design language that refreshed the entire Android experience
    </string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_chats">ChatsActivity</string>

    <string name="title_activity_about">aboutActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_new_group">NewGroup</string>


    <string name="hello_world">Hello world!</string>
    <string name="title_activity_add_members">AddMembers</string>
    <string name="title_activity_new_chat">NewChat</string>

    <!-- Preference.xml -->
    <string name="pref_sync">Sync Pref</string>
    <string name="pref_sync_summ">Summary</string>
    <string name="pref_syncConnectionType">Sync Connection Type</string>
    <string-array name="pref_syncConnectionTypes_entries">
        <item>Headings</item>
        <item>Headings and Details</item>
        <item>All Data</item>
    </string-array>
    <string-array name="pref_syncConnectionTypes_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_groupchat">GroupchatActivity</string>
    <string name="title_activity_privatechat">PrivatechatActivity</string>
    <string name="title_activity_new_chats">NewChatsActivity</string>
    <string name="title_activity_new_personal">NewPersonalActivity</string>
    <string name="title_activity_maps_chat">MapsChatActivity</string>


    <!-- Transition type strings -->
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>

    <string name="geofence_transition_notification_text">Click notification to return to app</string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error: invalid transition type %1$d
    </string>

    <string name="not_connected">Geofence not connected</string>

    <string name="geofences_added">Geofences added</string>
    <string name="geofences_removed">Geofences removed</string>
    <string name="title_activity_chats1">Chats1Activity</string>
    <string name="title_activity_chat1">Chat1Activity</string>
    <string name="title_activity_settings_">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="profile_other">Other Profile Picture</string>
    <string name="profile_me">My Profile Picture</string>
    <string name="sign_out">Sign Out</string>


</resources>
