<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ChatsActivity" >

    <group android:checkableBehavior="all">
        <item
            android:id="@+id/edit_profile"
            android:icon="@drawable/ic_person_black"
            android:title="@string/edit_profile" />

        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_settings_black"
            android:title="@string/action_settings"/>

        <item
            android:id="@+id/about"
            android:icon="@drawable/ic_info_black"
            android:title="@string/about_text"/>
        <item
            android:id="@+id/createGeofence"
            android:icon="@drawable/ic_action_geofence"
            android:title="Create Geofence"/>
        <item
            android:id="@+id/sign_out"
            android:icon="@drawable/ic_info_black"
            android:title="@string/sign_out"/>
    </group>
</menu>